[package]
name = "image-palette-recoloring"
version = "0.2.0"
authors = ["April Wade <wayedt@gmail.com>"]
edition = "2021"

[dependencies]
image = "0.24"
nalgebra = "0.32"
nalgebra-sparse = "0.9"
qhull-rs = { path = "../qhull-rs" }
good_lp = { version = "1.4", features = ["minilp"], default-features = false }

